# time-series-reconsiliation

./: .gitignore  AGENT.md  README.md  aggregation.py  config.yaml  evaluate.py  logging_utils.py  main.py  pyproject.toml  reconcile.py  residuals.py  train.py  tune.py
config/: config.yaml  config_tuned.yaml
evaluation/: evaluation.py
models/: __init__.py  arima.py  chronos.py  deepar.py  holt_winters.py  lightgbm_model.py  model_interface.py  nhits.py  prophet_model.py  random_forest.py  timesfm_model.py
notebooks/: kpi_explorer.ipynb  kpi_explorer_en.ipynb
utils/: aggregation_utils.py  evaluation_utils.py  features_utils.py  logging_utils.py  reconciliation_utils.py  residuals_utils.py  utils.py
utils/reconciliation/: __init__.py  core.py  library.py
utils/reconciliation/modes/: __init__.py  _common.py  cross_structural.py  cross_temporal.py  cross_temporal_structural.py
