[tool.poetry]
name = "time-series-reconsiliation"
version = "0.1.0"
description = ""
authors = ["pantelic-dusan <pan3bg@bosch.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
lightgbm = "^4.0"
statsmodels = "^0.14"
prophet = "^1.1"
neuralforecast = "^1.7"
gluonts = "^0.14"
torch = "^2.0"
lightning = "^2.0"
transformers = "^4.40"
joblib = "^1.3"
pyyaml = "^6.0"
timesfm = "^1.0"
orjson = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
